@@ -1,3 +1,7 @@
+2011-07-12 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/CFCalendar.c: Added CFCalendarGetTimeRangeOfUnit().
+
 2011-07-11 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/CFCalendar.c: Implemented CFCalendarGetComponentDifference().
